<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_no_shadow"
    
     >

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="202dp"
      android:orientation="vertical" 
       >

 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:minHeight="200dp"
    android:background="@drawable/bg_color"
     android:orientation="vertical"
      >
<ImageView 
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:src="@drawable/app_logo"
    android:contentDescription="@string/luck"
    />
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center_horizontal|center"
         android:padding="5dp"
         android:text="@string/info_input"
         android:textColor="#ffff"
         android:textSize="30sp"
         android:id="@+id/showInfo"
         android:textStyle="normal|bold|italic" >

</TextView>
 </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/inputLayout"
     >
    <EditText
        android:id="@+id/getUsername"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_texture"
         />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/submitbutton"
        android:text="@string/submit"
        android:textColor="#ffff"
        android:textColorLink="#ffff"
        android:textSize="30sp"
        android:textStyle="bold" 
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />

    </LinearLayout></LinearLayout>
</ScrollView>