<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_texture"
    android:orientation="vertical" >
 
<FrameLayout  
   android:layout_width="fill_parent"
   android:background="@drawable/bg_color"
   android:layout_height="50dp">
 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/bg_color"
         android:weightSum="100"
              >

<ImageView
    android:layout_width="0dip"
    android:layout_height="match_parent"
    android:contentDescription="@string/luck"
    android:src="@drawable/op_homework" 
    android:layout_weight="15"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_weight="10"
    android:gravity="center"
    android:text="@string/q_asked"
    android:textColor="#fff"
    android:textSize="20sp" />

<TextView
    android:id="@+id/q_asked"
    android:layout_width="0dip"
    android:text="@string/q_asked_def"
    android:background="@drawable/bg_color"
    android:layout_height="match_parent"
    android:textSize="20sp"
    android:textColor="#fff"
    android:gravity="center"
    android:layout_weight="25"
/>
<ImageView
    android:layout_width="0dip"
    android:layout_height="match_parent"
    android:contentDescription="@string/luck"
    android:src="@drawable/ic_correct" 
    android:layout_weight="15"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="15"
    android:gravity="center"
    android:text="@string/q_correct"
    android:textColor="#fff"
    android:textSize="20sp" />

<TextView
    android:id="@+id/q_correct"
    android:layout_width="0dip"
     android:text="@string/q_asked_def"
    android:layout_height="match_parent"
    android:textSize="20sp"
    android:textColor="#fff"
    android:gravity="center"
    android:layout_weight="20"
    android:background="@drawable/bg_color"
/>
</LinearLayout></FrameLayout>
 
 <FrameLayout 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_color"
     android:layout_margin="3dp"
     android:id="@+id/q_showinfo_layout"
     android:visibility="gone"
     >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_color_no_shadow"
     android:orientation="vertical"
     >
     <ImageView 
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:src="@drawable/app_logo"
         android:contentDescription="@string/luck"
          />
     <TextView 
            android:id="@+id/q_showInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/q_showinfo"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:textAlignment="center"
            android:padding="2dp"
            android:gravity="center"
            android:textStyle="italic"
            
            />
      <Button
                  android:id="@+id/q_showinfo_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="1dp"
                  android:background="@drawable/submitbutton"
                  android:padding="10dp"
                  android:text="@string/close"
                  android:textColor="#ffff"
                  android:textColorLink="#ffff"
                  android:textSize="30sp"
                  android:textStyle="bold" />
     </LinearLayout>
 </FrameLayout> 
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    >

<ScrollView  
    android:id="@+id/q_scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_texture"
    android:orientation="vertical" >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >
    <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="0dp"
         android:background="@drawable/bg_color"
    	 android:layout_margin="3dp"
    	 android:layout_weight="5"
         >
        
        <TextView 
            android:id="@+id/showQuestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/que"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:textAlignment="center"
            android:padding="20dp"
            android:gravity="center"
            android:textStyle="italic"
            
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
         android:background="@drawable/bg_color_no_shadow"
   		 android:layout_weight="5"
         android:layout_margin="3dp"
     	 android:orientation="vertical"
       
        >

          <LinearLayout
              android:id="@+id/optionLayout"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:background="@drawable/bg_color"
              android:orientation="vertical"
              android:visibility="gone" >

              <Button
                  android:id="@+id/autoAnswer"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginTop="1dp"
                  android:background="@drawable/submitbutton"
                  android:padding="10dp"
                  android:shadowColor="#0000"
                  android:text="@string/submit"
                  android:textColor="#ffff"
                  android:textColorLink="#ffff"
                  android:textSize="20sp"
                  android:textStyle="bold" />

</LinearLayout>
    <LinearLayout 
        android:orientation="horizontal"
        android:id="@+id/optionLayout1"
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:weightSum="100"
        android:layout_height="130dp"
      android:background="@drawable/bg_texture"
        android:layout_margin="3dp"
        > 

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:text="" 
            android:layout_weight="50"
            />
          <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:text="" 
            android:layout_weight="50"
            />
</LinearLayout>
<LinearLayout 
    	android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/optionLayout2"
        android:layout_width="fill_parent"
        android:weightSum="100"
        android:background="@drawable/bg_texture"
        android:layout_margin="3dp"
        android:layout_height="130dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:text="" 
            android:layout_weight="50"
            />
          <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:text="" 
            android:layout_weight="50"
            />
</LinearLayout>
    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:background="@drawable/bg_color"
         android:layout_margin="3dp"
    	     >


        </LinearLayout>
        
    </LinearLayout>
</ScrollView>
<FrameLayout  
   android:id="@+id/q_taskbar"
   android:layout_alignParentBottom="true"
   android:layout_width="fill_parent"
   android:background="@drawable/bg_color"
   android:layout_height="50dp">
 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/bg_color_no_shadow"
         android:weightSum="100"
              >

<ImageView
    android:layout_width="0dip"
    android:layout_height="match_parent"
    android:contentDescription="@string/luck"
    android:src="@drawable/infobutton" 
    android:layout_weight="15"
    android:padding="3dp"
    android:id="@+id/q_possibility"
    />

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="85"
    android:padding="5dp"
    android:progress="0"
     />

</LinearLayout></FrameLayout>
 
 </RelativeLayout>

</LinearLayout>